- A* heuristic implemented and integrated

--- a/footstep_planner/CMakeLists.txt
+++ b/footstep_planner/CMakeLists.txt
@@ -23,7 +23,7 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 #rosbuild_gensrv()
 
 #common commands for building c++ executables and libraries
-rosbuild_add_library(${PROJECT_NAME} src/FootstepPlanner.cpp src/FootstepPlannerNode.cpp src/Dstar.cpp src/Heuristic.cpp src/helper.cpp)
+rosbuild_add_library(${PROJECT_NAME} src/FootstepPlanner.cpp src/FootstepPlannerNode.cpp src/Dstar.cpp src/Heuristic.cpp src/Astar.cpp src/helper.cpp)
 #target_link_libraries(${PROJECT_NAME} another_library)
 #rosbuild_add_boost_directories()
 #rosbuild_link_boost(${PROJECT_NAME} thread)
