--- a/footstep_planner/config/footsteps_nao.yaml
+++ b/footstep_planner/config/footsteps_nao.yaml
@@ -3,15 +3,15 @@
 ### footstep settings ##########################################################
 # Footstep displacement vectors (in meter / rad)
 # WARNING: data type has to be float since integers will cause an exception
-footsteps/x:     [0.0,0.04,0.04,0.04,0.04,0.0,0.00,0.00,-0.04,-0.04,-0.04,-0.04]
-footsteps/y:     [0.0,0.00,0.00,0.04,0.04,0.0,0.04,0.04, 0.00, 0.00, 0.04, 0.04]
-footsteps/theta: [0.0,0.00,0.30,0.00,0.30,0.3,0.00,0.30, 0.00, 0.30, 0.00, 0.30]
+footsteps/x:     [0.0,0.04,0.04,0.04,0.04,0.0,0.00,0.00,-0.04,-0.04,-0.04,-0.04, 0.00, 0.04]
+footsteps/y:     [0.0,0.00,0.00,0.04,0.04,0.0,0.04,0.04, 0.00, 0.00, 0.04, 0.04,-0.01,-0.01]
+footsteps/theta: [0.0,0.00,0.30,0.00,0.30,0.3,0.00,0.30, 0.00, 0.30, 0.00, 0.30, 0.00, 0.00]
 
 ### footstep settings ##########################################################
-foot/size/x: 0.17
-foot/size/y: 0.06
+foot/size/x: 0.15
+foot/size/y: 0.08
 foot/size/z: 0.015
-foot/separation: 0.1
+foot/separation: 0.095
 foot/origin_shift/x: 0.02
 foot/origin_shift/y: 0.0
 foot/max/step/x: 0.04
