--- a/footstep_planner/config/footsteps_nao.yaml
+++ b/footstep_planner/config/footsteps_nao.yaml
@@ -1,4 +1,7 @@
 # Footstep parameterization for the Aldebaran Robotics Nao humanoid
+# costs to perform one footstep (in addition to distance costs, corresponds to 'meters')
+step_costs: 0.1
+
 
 ### footstep settings ##########################################################
 # Footstep displacement vectors (in meter / rad)
@@ -7,16 +10,21 @@ footsteps/x:     [0.0,0.04,0.04,0.04,0.04,0.0,0.00,0.00,-0.04,-0.04,-0.04,-0.04,
 footsteps/y:     [0.0,0.00,0.00,0.04,0.04,0.0,0.04,0.04, 0.00, 0.00, 0.04, 0.04,-0.01,-0.01]
 footsteps/theta: [0.0,0.00,0.30,0.00,0.30,0.3,0.00,0.30, 0.00, 0.30, 0.00, 0.30, 0.00, 0.00]
 
-### footstep settings ##########################################################
-foot/size/x: 0.15
-foot/size/y: 0.08
-foot/size/z: 0.015
-foot/separation: 0.095
-foot/origin_shift/x: 0.02
-foot/origin_shift/y: 0.0
-foot/max/step/x: 0.04
-foot/max/step/y: 0.04
-foot/max/step/theta: 0.349
-foot/max/inverse/step/x: 0.04
-foot/max/inverse/step/y: 0.01
-foot/max/inverse/step/theta: 0.05
+### foot settings ##########################################################
+foot:
+  size: {x: 0.15, y: 0.08, z: 0.015}
+  separation: 0.095
+  origin_shift: {x: 0.02, y: 0.0}
+  max:
+    step: {x: 0.04, y: 0.04, theta: 0.3}
+    inverse:
+      step: {x: 0.04, y: 0.01, theta: 0.05}
+      
+accuracy:    
+  # the execution accuracy of each footstep; the more accurate a footstep should
+  # fit into the calculated steps the more likely a replanning is necessary
+  footstep/x: 0.005
+  footstep/y: 0.005
+  footstep/theta: 0.07
+
+
