--- a/footstep_planner/CMakeLists.txt
+++ b/footstep_planner/CMakeLists.txt
@@ -20,7 +20,7 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 #uncomment if you have defined messages
 #rosbuild_genmsg()
 #uncomment if you have defined services
-rosbuild_gensrv()
+#rosbuild_gensrv()
 
 set(FOOTSTEP_PLANNER_FILES src/FootstepPlanner.cpp 
 	src/FootstepPlannerNode.cpp 
