--- a/footstep_planner/config/footsteps_asimo.yaml
+++ b/footstep_planner/config/footsteps_asimo.yaml
@@ -1,7 +1,11 @@
-# Footstep parameterization for a large humanoid, similar to ASIMO or HRP-2
+### Footstep parameterization for a large humanoid, similar to ASIMO or HRP-2 ##
 
-# costs to perform one footstep (in addition to distance costs, corresponds to 'meters')
-step_costs: 0.1
+# cost to perform one footstep (in addition to distance costs, corresponds to 'meters')
+step_cost: 0.1
+# cost to estimate the difference between the current orientation and the goal 
+# orientation; used in the heuristic it can easily overestimate the true path 
+# cost since this cost is not incorporated in each step
+diff_angle_cost: 0.0
 
 ### footstep settings ##########################################################
 # Footstep displacement vectors (in meter / rad)
@@ -19,7 +23,6 @@ foot:
     step: {x: 0.22, y: 0.12, theta: 0.7}
     inverse:
       step: {x: 0.1, y: 0.02, theta: 0.4}
-      
 accuracy:    
   # the execution accuracy of each footstep; the more accurate a footstep should
   # fit into the calculated steps the more likely a replanning is necessary
