--- a/footstep_planner/config/footsteps_nao.yaml
+++ b/footstep_planner/config/footsteps_nao.yaml
@@ -1,7 +1,11 @@
-# Footstep parameterization for the Aldebaran Robotics Nao humanoid
-# costs to perform one footstep (in addition to distance costs, corresponds to 'meters')
-step_costs: 0.1
+### Footstep parameterization for the Aldebaran Robotics Nao humanoid ##########
 
+# cost to perform one footstep (in addition to distance costs, corresponds to 'meters')
+step_cost: 0.05
+# cost to estimate the difference between the current orientation and the goal 
+# orientation; used in the heuristic it can easily overestimate the true path 
+# cost since this cost is not incorporated in each step
+diff_angle_cost: 0.0
 
 ### footstep settings ##########################################################
 # Footstep displacement vectors (in meter / rad)
@@ -10,7 +14,7 @@ footsteps/x:     [0.0, 0.04, 0.04, 0.04, 0.04, 0.0, 0.00, 0.00,-0.04,-0.04,-0.04
 footsteps/y:     [0.0, 0.00, 0.00, 0.04, 0.04, 0.0, 0.04, 0.04, 0.00, 0.00, 0.04, 0.04,-0.01,-0.01]
 footsteps/theta: [0.0, 0.00, 0.30, 0.00, 0.30, 0.3, 0.00, 0.30, 0.00, 0.30, 0.00, 0.30, 0.00, 0.00]
 
-### foot settings ##########################################################
+### foot settings ##############################################################
 foot:
   size: {x: 0.15, y: 0.08, z: 0.015}
   separation: 0.095
@@ -19,12 +23,9 @@ foot:
     step: {x: 0.04, y: 0.04, theta: 0.3}
     inverse:
       step: {x: 0.04, y: 0.01, theta: 0.05}
-      
 accuracy:    
   # the execution accuracy of each footstep; the more accurate a footstep should
   # fit into the calculated steps the more likely a replanning is necessary
   footstep/x: 0.005
   footstep/y: 0.005
   footstep/theta: 0.07
-
-
