--- a/footstep_planner/config/planning_params.yaml
+++ b/footstep_planner/config/planning_params.yaml
@@ -23,6 +23,7 @@ accuracy:
 # define the planner of choice provided by the SBPL package
 # - ARAPlanner
 # - ADPlanner
+# - RSTARPlanner
 planner_type: ARAPlanner
 
 # search until a specific time limit is reached or first solution is found 
@@ -31,3 +32,7 @@ search_until_first_solution: False
 allocated_time: 7.0
 initial_epsilon: 8.0
 forward_search: False
+
+# the limit of changed states that decides whether to replan or to start a hole
+# new planning task
+changed_states_limit: 5000
