--- a/footstep_planner/config/footsteps_nao.yaml
+++ b/footstep_planner/config/footsteps_nao.yaml
@@ -4,12 +4,13 @@
 # Footstep displacement vectors (in meter / rad)
 # WARNING: data type has to be float since integers will cause an exception
 footsteps/x:     [0.000,0.040,0.026,0.040,0.026,-0.014,0.000,-0.014,-0.040,-0.054,-0.040,-0.054,0.000,0.030]
-footsteps/y:     [0.095,0.095,0.093,0.135,0.133, 0.093,0.135, 0.133, 0.095, 0.093, 0.135, 0.133,0.085,0.085]
+footsteps/y:     [0.095,0.095,0.093,0.135,0.133, 0.093,0.135, 0.133, 0.095, 0.093, 0.135, 0.133,0.088,0.088]
 footsteps/theta: [0.000,0.000,0.300,0.000,0.300, 0.300,0.000, 0.300, 0.000, 0.300, 0.000, 0.300,0.000,0.000]
 
 ### foot settings ##############################################################
 foot:
   size: {x: 0.16, y: 0.06, z: 0.015}
+  separation: 0.095
   origin_shift: {x: 0.02, y: 0.0}
   max:
     step: {x: 0.06, y: 0.16, theta: 0.3}
