--- a/footstep_planner/config/footsteps_nao_navigation.yaml
+++ b/footstep_planner/config/footsteps_nao_navigation.yaml
@@ -5,17 +5,22 @@
 # NOTE: not all footsteps within the max values can be performed since the
 #       boundary of allowd footsteps is an ellipse
 # WARNING: data type has to be float since integers will cause an exception
-footsteps/x:     [0.000,0.040,0.026,0.040,0.026,-0.014,0.000,-0.014,-0.040,-0.054,-0.040,-0.054,0.000,0.030]
-footsteps/y:     [0.095,0.095,0.093,0.135,0.133, 0.093,0.135, 0.133, 0.095, 0.093, 0.135, 0.133,0.085,0.085]
-footsteps/theta: [0.000,0.000,0.300,0.000,0.300, 0.300,0.000, 0.300, 0.000, 0.300, 0.000, 0.300,0.000,0.000]
+footsteps/x:     [0.000,0.040,0.026,0.040,0.026,-0.014,0.000,-0.014,-0.030,-0.040,-0.030,-0.030,0.00,0.03]
+footsteps/y:     [0.095,0.095,0.093,0.135,0.133, 0.093,0.135, 0.133, 0.095, 0.093, 0.135, 0.133,0.09,0.09]
+footsteps/theta: [0.000,0.000,0.300,0.000,0.300, 0.300,0.000, 0.300, 0.000, 0.300, 0.000, 0.300,0.00,0.00]
 
 ### foot settings ##############################################################
 foot:
   size: {x: 0.16, y: 0.06, z: 0.015}
+  separation: 0.095
   origin_shift: {x: 0.02, y: 0.0}
   # NOTE: box of allowed footstep has to be smaller than the one from
   # Aldebaran's API
   max:
-    step: {x: 0.06, y: 0.14, theta: 0.3}
+    step: {x: 0.05, y: 0.13, theta: 0.3}
     inverse:
-      step: {x: -0.03, y: 0.09, theta: -0.1}
+      step: {x: -0.02, y: 0.09, theta: 0.0}
+
+### navigation settings ########################################################
+# feedback rate of the action server
+feedback_rate: 5.0
