--- a/gridmap_2d/CMakeLists.txt
+++ b/gridmap_2d/CMakeLists.txt
@@ -21,10 +21,10 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 #uncomment if you have defined services
 #rosbuild_gensrv()
 
+find_package(OpenCV REQUIRED)
 #common commands for building c++ executables and libraries
 rosbuild_add_library(${PROJECT_NAME} src/GridMap2D.cpp)
-#target_link_libraries(${PROJECT_NAME} another_library)
-#rosbuild_add_boost_directories()
-#rosbuild_link_boost(${PROJECT_NAME} thread)
-#rosbuild_add_executable(example examples/example.cpp)
-#target_link_libraries(example ${PROJECT_NAME})
+
+#define some target ...
+target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})
+
