--- a/footstep_planner/CMakeLists.txt
+++ b/footstep_planner/CMakeLists.txt
@@ -15,8 +15,8 @@ rosbuild_init()
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 
-# ROS fuerte
-find_package(sbpl REQUIRED)
+# ROS fuerte system install:
+#find_package(sbpl REQUIRED)
 # hardcoded fix for fuerte?
 include_directories(/opt/ros/fuerte/include/sbpl)
 
