--- a/footstep_planner/CMakeLists.txt
+++ b/footstep_planner/CMakeLists.txt
@@ -32,6 +32,7 @@ set(FOOTSTEP_PLANNER_FILES src/FootstepPlanner.cpp
     src/helper.cpp
     src/PathCostHeuristic.cpp
     src/PlanningStateChangeQuery.cpp
+    src/State.cpp
 )
 
 rosbuild_add_library(${PROJECT_NAME} ${FOOTSTEP_PLANNER_FILES})
