various small changes

--- a/footstep_planner/config/footsteps_asimo.yaml
+++ b/footstep_planner/config/footsteps_asimo.yaml
@@ -3,9 +3,11 @@
 ### footstep settings ##########################################################
 # Footstep displacement vectors (in meter / rad)
 # WARNING: data type has to be float/double, integers will cause an exception
-footsteps/x:     [0.00, 0.22, 0.00,-0.08, 0.12, 0.15, 0.08,-0.04,-0.10, 0.00, 0.15, 0.12, 0.12, 0.06]
-footsteps/y:     [0.14, 0.14, 0.26, 0.12, 0.22, 0.11, 0.22, 0.22, 0.14, 0.12, 0.14, 0.12, 0.18, 0.14]
-footsteps/theta: [0.00, 0.00, 0.00, 0.70, 0.30,-0.40, 0.00, 0.30, 0.00, 0.00, 0.00, 0.00, 0.00,-0.25]
+footsteps:
+  x:     [0.00, 0.22, 0.00,-0.08, 0.12, 0.15, 0.08,-0.04,-0.10, 0.00, 0.15, 0.12, 0.12, 0.06]
+  y:     [0.14, 0.14, 0.26, 0.12, 0.22, 0.11, 0.22, 0.22, 0.14, 0.12, 0.14, 0.12, 0.18, 0.14]
+  theta: [0.00, 0.00, 0.00, 0.70, 0.30,-0.40, 0.00, 0.30, 0.00, 0.00, 0.00, 0.00, 0.00,-0.25]
+
 
 ### foot settings ##############################################################
 foot:
@@ -16,4 +18,3 @@ foot:
     step: {x: 0.22, y: 0.28, theta: 0.7}
     inverse:
       step: {x: -0.1, y: 0.12, theta: -0.4}
-
