--- a/footstep_planner/config/footsteps_nao.yaml
+++ b/footstep_planner/config/footsteps_nao.yaml
@@ -3,9 +3,11 @@
 ### footstep settings ##########################################################
 # Footstep displacement vectors (in meter / rad)
 # WARNING: data type has to be float since integers will cause an exception
-footsteps/x:     [0.000,0.040,0.026,0.040,0.026,-0.014,0.000,-0.014,-0.040,-0.054,-0.040,-0.054,0.000,0.030]
-footsteps/y:     [0.095,0.095,0.093,0.135,0.133, 0.093,0.135, 0.133, 0.095, 0.093, 0.135, 0.133,0.088,0.088]
-footsteps/theta: [0.000,0.000,0.300,0.000,0.300, 0.300,0.000, 0.300, 0.000, 0.300, 0.000, 0.300,0.000,0.000]
+footsteps:
+  x:     [0.000,0.040,0.026,0.040,0.026,-0.014,0.000,-0.014,-0.040,-0.054,-0.040,-0.054,0.000,0.030]
+  y:     [0.095,0.095,0.093,0.135,0.133, 0.093,0.135, 0.133, 0.095, 0.093, 0.135, 0.133,0.088,0.088]
+  theta: [0.000,0.000,0.300,0.000,0.300, 0.300,0.000, 0.300, 0.000, 0.300, 0.000, 0.300,0.000,0.000]
+
 
 ### foot settings ##############################################################
 foot:
