--- a/footstep_planner/config/footsteps_nao_navigation.yaml
+++ b/footstep_planner/config/footsteps_nao_navigation.yaml
@@ -7,9 +7,9 @@
 #       boundary of allowd footsteps is an ellipse
 # WARNING: data type has to be float since integers will cause an exception
 footsteps:
-  x:     [0.000,0.040,0.026,0.040,0.026,-0.014,0.000,-0.014,-0.030,-0.030,-0.030,-0.030,0.00,0.03]
-  y:     [0.095,0.095,0.093,0.135,0.133, 0.093,0.135, 0.133, 0.095, 0.093, 0.135, 0.133,0.09,0.09]
-  theta: [0.000,0.000,0.300,0.000,0.300, 0.300,0.000, 0.300, 0.000, 0.300, 0.000, 0.300,0.00,0.00]
+  x:     [0.00, 0.07,-0.04, 0.00, 0.05, 0.01, 0.015, 0.04,-0.03, 0.06, 0.04,-0.02]
+  y:     [0.15, 0.09, 0.09, 0.12, 0.14, 0.13, 0.100, 0.12, 0.12, 0.12, 0.10, 0.12]
+  theta: [0.00, 0.00, 0.00, 0.00, 0.00,-0.45, 0.500, 0.30, 0.45, 0.00, 0.00, 0.00]
 
 
 ### foot settings ##############################################################
