--- a/footstep_planner/config/footsteps_nao_old.yaml
+++ b/footstep_planner/config/footsteps_nao_old.yaml
@@ -4,9 +4,9 @@
 # Footstep displacement vectors (in meter / rad)
 # WARNING: data type has to be float since integers will cause an exception
 footsteps:
-  x:     [0.00, 0.08,-0.04, 0.00, 0.05, 0.01, 0.015, 0.04,-0.03, 0.06, 0.04,-0.02]
-  y:     [0.16, 0.09, 0.09, 0.12, 0.14, 0.13, 0.100, 0.12, 0.12, 0.12, 0.10, 0.12]
-  theta: [0.00, 0.00, 0.00, 0.00, 0.00,-0.50, 0.500, 0.30, 0.50, 0.00, 0.00, 0.00]
+  x:     [0.000,0.040,0.026,0.040,0.026,-0.014,0.000,-0.014,-0.040,-0.054,-0.040,-0.054,0.000,0.030]
+  y:     [0.095,0.095,0.093,0.135,0.133, 0.093,0.135, 0.133, 0.095, 0.093, 0.135, 0.133,0.088,0.088]
+  theta: [0.000,0.000,0.300,0.000,0.300, 0.300,0.000, 0.300, 0.000, 0.300, 0.000, 0.300,0.000,0.000]
 
 
 ### foot settings ##############################################################
