--- a/humanoid_localization/config/nao_localization_laser.yaml
+++ b/humanoid_localization/config/nao_localization_laser.yaml
@@ -1,3 +1,7 @@
+#
+# 6D localization configuration for the Nao humanoid with laser head
+#
+
 
  # raycasting (slow) or endpoint model (approx)
 use_raycasting: true
@@ -28,21 +32,21 @@ num_sensor_beams: 48
 
 # min traversed odometry interval between laser measurements:
 # 
-laser_thres_trans: 0.2
-laser_thres_rot: 0.4
+update_min_trans: 0.2
+update_min_rot: 0.4
 
 # laser obs. model (for raycasting only)
-laser_z_hit: 0.8
-laser_z_short: 0.1
-laser_z_max: 0.05
-laser_z_rand: 0.05
-laser_sigma_hit: 0.05
-laser_lambda_short: 0.1
+raycasting/z_hit: 0.8
+raycasting/z_short: 0.1
+raycasting/z_max: 0.05
+raycasting/z_rand: 0.05
+raycasting/sigma_hit: 0.05
+raycasting/lambda_short: 0.1
 
 # laser obs.model (for endpoint model only)
 # std.dev for gaussian (p_hit)
 #use in loc
-laser_endp_sigma: 0.05
+endpoint/sigma: 0.05
 #used for global:
 #laser_endp_sigma: 0.07
 
@@ -59,22 +63,22 @@ motion_sigma_pitch: 0.015 # 0.85 deg.
 motion_noise/x: 0.15    # per m
 motion_noise/y: 0.15    # per m
 motion_noise/z: 0.05   # per m
-motion_noise/R: 0.1    # per m
-motion_noise/P: 0.1    # per m
-motion_noise/Y: 0.8    # per m
+motion_noise/roll: 0.1    # per m
+motion_noise/pitch: 0.1    # per m
+motion_noise/yaw: 0.8    # per m
 
 # initial pose (when no truepose available):
-initial_pose_x: 2.0
-initial_pose_y: 2.0
-initial_pose_z: 0.31     # over z-plane 
-initial_pose_roll: 0.0
-initial_pose_pitch: 0.0
-initial_pose_yaw: 4.71    
+initial_pose/x: 2.0
+initial_pose/y: 2.0
+initial_pose/z: 0.31     # over z-plane 
+initial_pose/roll: 0.0
+initial_pose/pitch: 0.0
+initial_pose/yaw: 4.71    
 
 # std dev for initial noise (truepose or manual init)
-initial_std_x: 0.03
-initial_std_y: 0.03
-initial_std_z: 0.015
-initial_std_roll: 0.04
-initial_std_pitch: 0.04
-initial_std_yaw: 0.2    # ~13 deg
+initial_std/x: 0.03
+initial_std/y: 0.03
+initial_std/z: 0.015
+initial_std/roll: 0.04
+initial_std/pitch: 0.04
+initial_std/yaw: 0.2    # ~13 deg
