--- a/gridmap_2d/CMakeLists.txt
+++ b/gridmap_2d/CMakeLists.txt
@@ -1,30 +1,24 @@
-cmake_minimum_required(VERSION 2.4.6)
-include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
+cmake_minimum_required(VERSION 2.8.3)
+project(gridmap_2d)
 
-# Set the build type.  Options are:
-#  Coverage       : w/ debug symbols, w/o optimization, w/ code-coverage
-#  Debug          : w/ debug symbols, w/o optimization
-#  Release        : w/o debug symbols, w/ optimization
-#  RelWithDebInfo : w/ debug symbols, w/ optimization
-#  MinSizeRel     : w/o debug symbols, w/ optimization, stripped binaries
-#set(ROS_BUILD_TYPE RelWithDebInfo)
-
-rosbuild_init()
-
-#set the default path for built executables to the "bin" directory
-set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
-#set the default path for built libraries to the "lib" directory
-set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
-
-#uncomment if you have defined messages
-#rosbuild_genmsg()
-#uncomment if you have defined services
-#rosbuild_gensrv()
+find_package(catkin REQUIRED COMPONENTS nav_msgs)
 
 find_package(OpenCV REQUIRED)
-#common commands for building c++ executables and libraries
-rosbuild_add_library(${PROJECT_NAME} src/GridMap2D.cpp)
+
+catkin_package(
+  INCLUDE_DIRS include
+  LIBRARIES ${PROJECT_NAME}
+)
+
+include_directories(${catkin_INCLUDE_DIRS})
+include_directories(include)
+
+add_library(${PROJECT_NAME} src/GridMap2D.cpp)
 
 #define some target ...
 target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})
 
+# install
+install(TARGETS ${PROJECT_NAME}
+        DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+) 
