humanoid_planner_2d: adding option to find SBPL overlay, reducing output

--- a/humanoid_planner_2d/CMakeLists.txt
+++ b/humanoid_planner_2d/CMakeLists.txt
@@ -3,9 +3,14 @@ project(humanoid_planner_2d)
 
 find_package(catkin REQUIRED geometry_msgs gridmap_2d roscpp)
 
+## CMake config:
+#find_package(sbpl REQUIRED)
+## pkg-config:
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(SBPL REQUIRED sbpl)
+
 include_directories(${SBPL_INCLUDE_DIRS})
+# not needed for SBPL with CMake config
 link_directories(${SBPL_LIBRARY_DIRS})
 
 catkin_package(
