--- a/humanoid_localization/CMakeLists.txt
+++ b/humanoid_localization/CMakeLists.txt
@@ -9,6 +9,11 @@ find_package(octomap REQUIRED)
 include_directories(${OCTOMAP_INCLUDE_DIRS})
 link_libraries(${OCTOMAP_LIBRARIES})
 
+# required for OpenMP
+SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
+
 find_package(dynamicEDT3D)
 if (${dynamicEDT3D_FOUND})                                                                       
   include_directories(${DYNAMICEDT3D_INCLUDE_DIRS})                                                          
