--- a/humanoid_localization/package.xml
+++ b/humanoid_localization/package.xml
@@ -33,6 +33,7 @@
   <build_depend>pcl_ros</build_depend>
   <build_depend>pcl_conversions</build_depend>
   <build_depend>sensor_msgs</build_depend>
+  <build_depend>cmake_modules</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>tf</run_depend>
